@@ -7,7 +7,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
@@ -21,8 +20,8 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
@@ -35,9 +34,9 @@ public class SecurityConfig {
 @Bean
 	public UrlBasedCorsConfigurationSource corsConfigurationSource(){
 	CorsConfiguration configuration = new CorsConfiguration();
-	configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-	configuration.setAllowedOrigins(Arrays.asList("GET","PUT","DELETE","POST","OPTIONS"));
-	configuration.setAllowedOrigins(Arrays.asList("Authorization","Content-Type","X-Requested-With","Accept"));
+	configuration.setAllowedOrigins(List.of("http://127.0.0.1:5173"));
+	configuration.setAllowedMethods(Arrays.asList("GET","PUT","DELETE","POST","OPTIONS"));
+	configuration.setAllowedHeaders(Arrays.asList("Authorization","Content-Type","X-Requested-With","Accept"));
 
 	UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 
@@ -56,10 +55,8 @@ return  source;
 				.cors(Customizer.withDefaults())
 				.csrf(AbstractHttpConfigurer::disable)
 				.authorizeHttpRequests(auth -> {
-					auth.requestMatchers("/Images/**").permitAll();
 					auth.requestMatchers("/api/**").permitAll();
 					auth.requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll();
-					auth.requestMatchers(HttpMethod.POST,"/api/**").permitAll();
 					auth.anyRequest().authenticated();
 				})
 				.sessionManagement(session -> {
